Bug 290698 - dolphin refresh all the time a folder when a file is download inside
Summary: dolphin refresh all the time a folder when a file is download inside
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 1.99
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-05 14:49 UTC by humufr
Modified: 2012-01-09 21:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description humufr 2012-01-05 14:49:14 UTC
Version:           1.99 (using Devel) 
OS:                Linux

If you download a file and you have an instance of dolphin open. The instance is refresh all the time and moving the icons all the time. Files are very difficult to select with the mouse. 

Reproducible: Always

Steps to Reproduce:
dowload a file, open a dolphin instance at the place of the download.

Actual Results:  
refresh and move the icons all the time

Expected Results:  
do not move the icons because of the download.
Comment 1 Christoph Feck 2012-01-05 15:43:03 UTC
Does the file during download progress have the ".part" extension, so that Dolphin knows that it is not the final version of the file?
Comment 2 Peter Penz 2012-01-05 15:53:05 UTC
@Christoph: Even if it does not have a .part extension Dolphin should not refresh the previews each time the file changes (I guess the reporter forgot to mention that previews are turned on). This is currently an open issue in KFileItemModelRolesUpdater - we already have a solution in KFilePreviewGenerator from kdelibs and I'll use a similar approach to fix this (I could not use KFilePreviewGenerator for several reasons anymore).
Comment 3 humufr 2012-01-06 08:43:04 UTC
Indeed I forgot to mention that the preview mode was on. Sorry.
Comment 4 humufr 2012-01-06 08:46:36 UTC
I also forgot to mention that the extension was not part but crdownload
Comment 5 Peter Penz 2012-01-09 21:17:12 UTC
Git commit 0829313c05c8411d5d21c3aca1f74928c7698645 by Peter Penz.
Committed on 09/01/2012 at 22:10.
Pushed by ppenz into branch 'KDE/4.8'.

Prevent generating previews all the time during downloading a large file

When downloading a large file the preview should not be recreated each time
a change-notification has been received. Create the preview after getting
the first file change, but postpone creating the next previews until no change
has been done during a longer period of time.
FIXED-IN: 4.8.0

M  +52   -3    dolphin/src/kitemviews/kfileitemmodelrolesupdater.cpp
M  +15   -0    dolphin/src/kitemviews/kfileitemmodelrolesupdater.h

http://commits.kde.org/kde-baseapps/0829313c05c8411d5d21c3aca1f74928c7698645
Comment 6 Peter Penz 2012-01-09 21:19:15 UTC
Git commit 5ce50afbb63ac97cca1e32d3704c976e0d653ed8 by Peter Penz.
Committed on 09/01/2012 at 22:10.
Pushed by ppenz into branch 'master'.

Prevent generating previews all the time during downloading a large file

When downloading a large file the preview should not be recreated each time
a change-notification has been received. Create the preview after getting
the first file change, but postpone creating the next previews until no change
has been done during a longer period of time.
FIXED-IN: 4.8.0

M  +52   -3    dolphin/src/kitemviews/kfileitemmodelrolesupdater.cpp
M  +15   -0    dolphin/src/kitemviews/kfileitemmodelrolesupdater.h

http://commits.kde.org/kde-baseapps/5ce50afbb63ac97cca1e32d3704c976e0d653ed8