Prevent generating previews all the time during downloading a large file

When downloading a large file the preview should not be recreated each time
a change-notification has been received. Create the preview after getting
the first file change, but postpone creating the next previews until no change
has been done during a longer period of time.

BUG: 290698
FIXED-IN: 4.8.0